bugfix The ball jumps to the beginning of the match timeline, smooth timeline progress

--- a/client/src/containers/Live/progress.style.scss
+++ b/client/src/containers/Live/progress.style.scss
@@ -8,4 +8,9 @@
       display: none;
     }
   }
+  // Animations
+  .rangeslider__fill,
+  .rangeslider__handle {
+    transition: all 0.2s linear 0s;
+  }
 }
